Fix x overflow

--- a/app.css
+++ b/app.css
@@ -1,10 +1,16 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-	padding: 2rem;
+	padding: 1rem;
+	margin: 0;
 }
 
 #app {
 	width: 100%;
 	max-width: 600px;
+	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -21,11 +27,12 @@ body {
 
 #han-container {
 	width: 100%;
-	padding: 2rem 2rem 0.5rem 2rem;
+	padding: 1rem 1rem 0.5rem 1rem;
 	display: grid;
-	grid-template-columns: auto auto auto;
+	grid-template-columns: repeat(3, 1fr);
+	justify-items: center;
 	align-items: center;
-	gap: 2rem;
+	gap: 1rem;
 }
 
 .copy-container {
@@ -57,7 +64,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 1em;
-	width: 100px;
+	width: 100%;
+	max-width: 100px;
 	align-items: center;
 }
 
